fixed search bar spacing

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -3,7 +3,6 @@ div.home-container{
     display: flex;
     justify-content: center;
     flex-direction: row;
-    margin-top: 1em;
     margin-bottom: 5em;
 }
 div.home-logo{
